Backport to 1.20.1
Add Tectonic chunk save compatibility

Keep Tectonic out of the runtime classpath

Use Forge 1.20.1 Tectonic dependency

Track generated Mixin refmap